Fix dialogue z-index

--- a/docs/assets/index-NcyCnLOi.css
+++ b/docs/assets/index-NcyCnLOi.css
@@ -16,6 +16,7 @@
 	position: relative;
 	display: flex;
 	flex-direction: row;
+	z-index: 4;
 }
 
 .dialogue {
